--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,9 +1,9 @@
 [project]
-name = "rag"
+name = "ragchat"
 version = "0.1.0"
-description = "Retrieval-Augmented Generation system for financial documents"
+description = "Retrieval-Augmented Generation chat tool for querying information from documents"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.9"
 dependencies = [
     "chromadb>=1.0.5",
     "ipython>=9.1.0",
@@ -20,6 +20,9 @@ dependencies = [
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
+
+[project.scripts]
+ragchat = "ragchat.cli:cli_main"
 
 [tool.hatch.metadata]
 allow-direct-references = true
